--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,8 @@ on:
   # will be triggered at 04:05 on every 2nd day-of-month from 2 through 30.
   schedule:
     - cron: '5 4 2-30/2 * *'
+    
+  workflow_dispatch:
 
 # See https://github.com/marketplace/actions/docker-run-step
 # See https://github.com/addnab/docker-run-action
